--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,10 +36,10 @@
     <string name="prompt_phone">Phone</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
+    <string name="location">Location</string>
     <string name="yes">YES</string>
     <string name="no">NO</string>
     <string name="register_dialog">Not registered ID, do you want to register now?</string>
