[Add] 현재 위치로 이동할 때 알림 SnackBar 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="no">NO</string>
     <string name="register_dialog">Not registered ID, do you want to register now?</string>
     <string name="password_check_failed">Password is incorrect.</string>
+    <string name="move_to_current_location">Moving to current location.</string>
 </resources>
