--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -5,4 +5,5 @@
     <string name="register_dialog">가입되어 있지 않은 회원입니다. 가입하시겠습니까?</string>
     <string name="password_check_failed">비밀번호가 올바르지 않습니다.</string>
     <string name="location">위치</string>
+    <string name="move_to_current_location">현재 위치로 이동합니다.</string>
 </resources>
