--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,9 +32,11 @@
     <string name="fcm_message">FCM Message</string>
     <string name="prompt_id">ID</string>
     <string name="prompt_password">Password</string>
+    <string name="prompt_password2">Password Again</string>
     <string name="prompt_realname">Real Name</string>
     <string name="prompt_phone">Phone</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Sign in</string>
+    <string name="action_register">Register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
