--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -15,4 +15,13 @@
     <string name="prompt_realname">실명</string>
     <string name="prompt_phone">전화번호</string>
     <string name="action_register">회원가입</string>
+    <string name="etc">기타…</string>
+    <string name="risk_label_type">종류</string>
+    <string name="risk_label_title">제목</string>
+    <string name="risk_label_content">내용</string>
+    <string name="risk_label_photo">사진</string>
+    <string name="risk_label_title_hint">제목 입력…</string>
+    <string name="risk_label_content_hint">내용 입력…</string>
+    <string name="risk_label_photo_hint">사진 첨부…</string>
+    <string name="risk_label_submit">구조 요청 전송</string>
 </resources>
