--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="risk_label_photo_hint">Choose Photo…</string>
     <string name="risk_label_submit">Risk Report Submit</string>
     <string name="risk_title_sample">%s occurrence</string>
-    <string name="risk_content_sample">%s has occurred near location %s. Assistance is requested.</string>
+    <string name="risk_content_sample">%s has occurred near location. Assistance is requested.</string>
+    <string name="risk_confirm">When a rescue request is sent, location information and incident details can be provided to emergency responders and nearby users. This action is irreversible, and false reporting may result in legal consequences.\n\nAre you sure you want to make a rescue request from your current location?</string>
 </resources>
