--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -27,4 +27,9 @@
     <string name="risk_title_sample">%s 구조 요청</string>
     <string name="risk_content_sample">현재 위치에서 %s, 도움을 요청합니다.</string>
     <string name="risk_confirm">구조 요청이 전송될 시, 긴급 요원과 인근 사용자에게 위치 정보 및 사고 정보를 제공할 수 있습니다.  이는 취소할 수 없으며, 허위 신고로 인한 법적 책임을 질 수 있습니다.\n\n정말 현재 위치에서 구조 요청을 하시겠습니까?</string>
+    <string name="risk_label_time">제보 시각</string>
+    <string name="risk_label_is_solved">해결 여부</string>
+    <string name="risk_label_solved">해결됨</string>
+    <string name="risk_label_unsolved">해결되지 않음</string>
+    <string name="risk_label_location">위치</string>
 </resources>
