--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,5 @@
     <string name="risk_label_solved">Solved</string>
     <string name="risk_label_unsolved">Unsolved</string>
     <string name="risk_label_location">Location</string>
+    <string name="risk_report_title">Risk Reports</string>
 </resources>
