--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -36,4 +36,7 @@
     <string name="risk_label_level">위험 수준</string>
     <string name="risk_label_impact">위험 척도</string>
     <string name="risk_label_user">사용자</string>
+    <string name="emergency_request_title">긴급 요청</string>
+    <string name="emergency_request_content">긴급 요청을 실행합니다. 이는 취소할 수 없으며, 허위 신고로 인한 법적 책임을 질 수 있습니다.\n\n긴급 요청의 경우, 매우 긴급한 상황에만 사용할 수 있습니다. 정말 현재 위치에서 구조 요청을 하시겠습니까?</string>
+    <string name="emergency_request_content_again">다시 한 번 확인합니다.</string>
 </resources>
